Segunda parte pdf

--- a/css/grid-system.css
+++ b/css/grid-system.css
@@ -13,6 +13,9 @@
   margin-right: auto;
   margin-left: auto;
 }
+.container-fluid {
+	width: 100%;
+}
 
 @media (max-width: 767px) {
 	.container {
